--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="app.js"></script> -->
-    <script src="app-2.js"></script>
+    <!-- <script src="app.js"></script> 
+    <script src="app-2.js"></script>-->
+    <script src="app-3.js"></script>
+    
 </body>
 </html>
